更新配置文件模板

--- a/Tool/QuantumultX/Config/Quantumult_X_Sample_Configuration_By_iKeLee.conf
+++ b/Tool/QuantumultX/Config/Quantumult_X_Sample_Configuration_By_iKeLee.conf
@@ -1,6 +1,6 @@
 # Quantumelt X 进阶配置
 #
-# 日期：2023.03.28
+# 日期：2023.04.09
 # 配置作者：https://t.me/iKeLee
 # 适用版本：v1.1.0 及以上
 [general]
@@ -69,13 +69,12 @@ https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/T
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Spotify/Spotify.list, tag = Spotify, force-policy = 香港场景策略组, update-interval = 86400, opt-parser = false, enabled = false
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Google/Google.list, tag = Google, force-policy = 香港场景策略组, update-interval = 86400, opt-parser = false, enabled = false
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/OneDrive/OneDrive.list, tag = OneDrive, force-policy = 香港场景策略组, update-interval = 86400, opt-parser = false, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Speedtest/Speedtest.list, tag = Speedtest, force-policy = direct, update-interval = 86400, opt-parser = false, enabled = false
+https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rule/Speedtest.snippet, tag = Speedtest, force-policy = direct, update-interval = 86400, opt-parser = false, enabled = false
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rule/Tieba_remove_ads_rules.snippet, tag = 贴吧去广告, update-interval = 86400, opt-parser = false, enabled = true
 FILTER_LAN, tag = LAN, force-policy = direct, enabled = true
 FILTER_REGION, tag = CN REGION, force-policy = direct, enabled = true
 [rewrite_remote]
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rewrite/BingAI.snippet, tag = Bing AI, update-interval = 86400, opt-parser = false, enabled = true
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rewrite/JD_Price.snippet, tag = 京东比价, update-interval = 86400, opt-parser = false, enabled = true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rewrite/Weibo_remove_ads.snippet, tag = 微博去广告, update-interval = 86400, opt-parser = false, enabled = true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rewrite/Tieba_remove_ads.snippet, tag = 贴吧去广告, update-interval = 86400, opt-parser = false, enabled = true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rewrite/Zhihu_remove_ads.snippet, tag = 知乎去广告, update-interval = 86400, opt-parser = false, enabled = true
@@ -96,6 +95,10 @@ https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rewrite/Google.
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rewrite/BoxJS.snippet, tag = BoxJS, update-interval = 86400, opt-parser = false, enabled = true
 [server_local]
 [filter_local]
+ip-cidr, 223.5.5.5/32, direct
+ip-cidr, 119.29.29.29/32, direct
+ip-cidr, 1.12.12.12/32, direct
+ip6-cidr, 2402:4e00::/128, direct
 final, 香港场景策略组
 [rewrite_local]
 [task_local]
