更新配置文件模板

--- a/Tool/Loon/Config/Loon_Simple_Sample_Configuration_By_iKeLee.conf
+++ b/Tool/Loon/Config/Loon_Simple_Sample_Configuration_By_iKeLee.conf
@@ -1,12 +1,12 @@
 # Loon 最小配置
-# Date: 2023.04.09
+# Date: 2023.04.10
 # Author: https://t.me/iKeLee
 
 [General]
 ipv6 = true
-dns-server = 119.29.29.29, 2402:4e00::
+dns-server = 119.29.29.29, 223.5.5.5
 # 腾讯DoH和阿里云DoH
-doh-server = https://1.12.12.12/dns-query, https://223.5.5.5/dns-query
+doh-server = https://223.5.5.5/dns-query, https://dns.alidns.com
 allow-wifi-access = false
 wifi-access-http-port = 7222
 wifi-access-socks5-port = 7221
@@ -56,8 +56,6 @@ bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/
 # IP-CIDR, 127.0.0.0/8, DIRECT
 IP-CIDR, 223.5.5.5/32, DIRECT, no-resolve
 IP-CIDR, 119.29.29.29/32, DIRECT, no-resolve
-IP-CIDR, 1.12.12.12/32, DIRECT, no-resolve
-IP-CIDR6, 2402:4e00::, DIRECT, no-resolve
 # GEOIP, cn, DIRECT
 FINAL, 香港
 
