--- a/Tool/QuantumultX/Config/Quantumult_X_Simple_Sample_Configuration_By_iKeLee.conf
+++ b/Tool/QuantumultX/Config/Quantumult_X_Simple_Sample_Configuration_By_iKeLee.conf
@@ -1,6 +1,6 @@
 # Quantumelt X 最小配置
 #
-# 日期：2023.04.09
+# 日期：2023.04.10
 # 配置作者：https://t.me/iKeLee
 # 适用版本：v1.1.0 及以上
 [general]
@@ -13,7 +13,7 @@ dns_exclusion_list = *.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id
 [dns]
 no-system
 server = 119.29.29.29, excluded_ssids = PHICOMM_5G
-server = [2402:4e00::], excluded_ssids = PHICOMM_5G
+server = 223.5.5.5, excluded_ssids = PHICOMM_5G
 server = 10.0.0.1:7874, included_ssids = PHICOMM_5G
 doh-server = https://1.12.12.12/dns-query, https://223.5.5.5/dns-query, excluded_ssids = PHICOMM_5G
 [policy]
@@ -73,8 +73,6 @@ https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rewrite/BoxJS.s
 [filter_local]
 ip-cidr, 223.5.5.5/32, direct
 ip-cidr, 119.29.29.29/32, direct
-ip-cidr, 1.12.12.12/32, direct
-ip6-cidr, 2402:4e00::/128, direct
 final, 香港
 [rewrite_local]
 [task_local]
