--- a/Tool/Loon/Config/Loon_Sample_Configuration_By_iKeLee.conf
+++ b/Tool/Loon/Config/Loon_Sample_Configuration_By_iKeLee.conf
@@ -6,7 +6,7 @@
 ipv6 = true
 dns-server = 119.29.29.29, 223.5.5.5
 # 腾讯DoH和阿里云DoH
-doh-server = https://223.5.5.5/dns-query, https://dns.alidns.com
+doh-server = https://223.5.5.5/dns-query, https://dns.alidns.com/dns-query
 allow-wifi-access = false
 wifi-access-http-port = 7222
 wifi-access-socks5-port = 7221
