更新QuantumultX配置文件模板

--- a/Tool/QuantumultX/Config/Quantumult_X_Simple_Sample_Configuration_By_iKeLee.conf
+++ b/Tool/QuantumultX/Config/Quantumult_X_Simple_Sample_Configuration_By_iKeLee.conf
@@ -15,7 +15,7 @@ no-system
 server = 119.29.29.29, excluded_ssids = PHICOMM_5G
 server = 223.5.5.5, excluded_ssids = PHICOMM_5G
 server = 10.0.0.1:7874, included_ssids = PHICOMM_5G
-doh-server = https://1.12.12.12/dns-query, https://223.5.5.5/dns-query, excluded_ssids = PHICOMM_5G
+doh-server = https://223.5.5.5/dns-query, https://dns.alidns.com/dns-query, excluded_ssids = PHICOMM_5G
 [policy]
 url-latency-benchmark = 香港, resource-tag-regex = ., server-tag-regex = ^(?=.*((?i)🇭🇰|港|虚通|HK|Hong))(?!.*((?i)回国|校园|游戏|教育|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|群|GAME|TG)).*$, check-interval = 60, alive-checking = false, tolerance = 0, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
 url-latency-benchmark = 台湾, resource-tag-regex = ., server-tag-regex = ^(?=.*((?i)🇹🇼|台|TW|Tai))(?!.*((?i)回国|校园|游戏|教育|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|群|GAME|TG)).*$, check-interval = 60, alive-checking = false, tolerance = 0, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
@@ -71,6 +71,7 @@ https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rewrite/Google.
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rewrite/BoxJS.snippet, tag = BoxJS, update-interval = 86400, opt-parser = false, enabled = true
 [server_local]
 [filter_local]
+host, dns.alidns.com, direct
 ip-cidr, 223.5.5.5/32, direct
 ip-cidr, 119.29.29.29/32, direct
 final, 香港
