更新Loon配置文件模板

--- a/Tool/Loon/Config/Loon_Simple_Sample_Configuration_By_iKeLee.conf
+++ b/Tool/Loon/Config/Loon_Simple_Sample_Configuration_By_iKeLee.conf
@@ -54,8 +54,8 @@ bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/
 # IP-CIDR, 10.0.0.0/8, DIRECT
 # IP-CIDR, 172.16.0.0/12, DIRECT
 # IP-CIDR, 127.0.0.0/8, DIRECT
-IP-CIDR, 223.5.5.5/32, no-resolve
-IP-CIDR, 119.29.29.29/32, no-resolve
+IP-CIDR, 223.5.5.5/32, DIRECT, no-resolve
+IP-CIDR, 119.29.29.29/32, DIRECT, no-resolve
 # GEOIP, cn, DIRECT
 FINAL, 香港
 
