更新配置文件模板

--- a/Tool/Loon/Config/Loon_Sample_Configuration_By_iKeLee.conf
+++ b/Tool/Loon/Config/Loon_Sample_Configuration_By_iKeLee.conf
@@ -1,5 +1,5 @@
 # Loon 进阶配置
-# Date: 2023.04.12
+# Date: 2023.04.14
 # Author: https://t.me/iKeLee
 
 [General]
@@ -53,28 +53,28 @@ bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/
 # --------------------------------
 # 自动策略组
 # 延时优选策略组
-香港延时优选策略组 = url-test, 香港节点, url = http://www.gstatic.com/generate_204, interval = 60, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
-台湾延时优选策略组 = url-test, 台湾节点, url = http://www.gstatic.com/generate_204, interval = 60, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
-日本延时优选策略组 = url-test, 日本节点, url = http://www.gstatic.com/generate_204, interval = 60, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
-韩国延时优选策略组 = url-test, 韩国节点, url = http://www.gstatic.com/generate_204, interval = 60, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/KR.png
-美国延时优选策略组 = url-test, 美国节点, url = http://www.gstatic.com/generate_204, interval = 60, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
-新加坡延时优选策略组 = url-test, 新加坡节点, url = http://www.gstatic.com/generate_204, interval = 60, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
+香港延时优选策略组 = url-test, 香港节点, url = http://cp.cloudflare.com/generate_204, interval = 60, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
+台湾延时优选策略组 = url-test, 台湾节点, url = http://cp.cloudflare.com/generate_204, interval = 60, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
+日本延时优选策略组 = url-test, 日本节点, url = http://cp.cloudflare.com/generate_204, interval = 60, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
+韩国延时优选策略组 = url-test, 韩国节点, url = http://cp.cloudflare.com/generate_204, interval = 60, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/KR.png
+美国延时优选策略组 = url-test, 美国节点, url = http://cp.cloudflare.com/generate_204, interval = 60, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
+新加坡延时优选策略组 = url-test, 新加坡节点, url = http://cp.cloudflare.com/generate_204, interval = 60, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
 # --------------------------------
 # 故障转移策略组
-香港故障转移策略组 = fallback, 香港节点, url = http://www.gstatic.com/generate_204, interval = 60, max-timeout = 3000, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
-台湾故障转移策略组 = fallback, 台湾节点, url = http://www.gstatic.com/generate_204, interval = 60, max-timeout = 3000, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
-日本故障转移策略组 = fallback, 日本节点, url = http://www.gstatic.com/generate_204, interval = 60, max-timeout = 3000, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
-韩国故障转移策略组 = fallback, 韩国节点, url = http://www.gstatic.com/generate_204, interval = 60, max-timeout = 3000, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/KR.png
-美国故障转移策略组 = fallback, 美国节点, url = http://www.gstatic.com/generate_204, interval = 60, max-timeout = 3000, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
-新加坡故障转移策略组 = fallback, 新加坡节点, url = http://www.gstatic.com/generate_204, interval = 60, max-timeout = 3000, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
+香港故障转移策略组 = fallback, 香港节点, url = http://cp.cloudflare.com/generate_204, interval = 60, max-timeout = 3000, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
+台湾故障转移策略组 = fallback, 台湾节点, url = http://cp.cloudflare.com/generate_204, interval = 60, max-timeout = 3000, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
+日本故障转移策略组 = fallback, 日本节点, url = http://cp.cloudflare.com/generate_204, interval = 60, max-timeout = 3000, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
+韩国故障转移策略组 = fallback, 韩国节点, url = http://cp.cloudflare.com/generate_204, interval = 60, max-timeout = 3000, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/KR.png
+美国故障转移策略组 = fallback, 美国节点, url = http://cp.cloudflare.com/generate_204, interval = 60, max-timeout = 3000, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
+新加坡故障转移策略组 = fallback, 新加坡节点, url = http://cp.cloudflare.com/generate_204, interval = 60, max-timeout = 3000, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
 # --------------------------------
 # 负载均衡策略组
-香港负载均衡策略组 = load-balance, 香港节点, url = http://www.gstatic.com/generate_204, interval = 60, max-timeout = 3000, algorithm = pcc, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
-台湾负载均衡策略组 = load-balance, 台湾节点, url = http://www.gstatic.com/generate_204, interval = 60, max-timeout = 3000, algorithm = pcc, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
-日本负载均衡策略组 = load-balance, 日本节点, url = http://www.gstatic.com/generate_204, interval = 60, max-timeout = 3000, algorithm = pcc, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
-韩国负载均衡策略组 = load-balance, 韩国节点, url = http://www.gstatic.com/generate_204, interval = 60, max-timeout = 3000, algorithm = pcc, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/KR.png
-美国负载均衡策略组 = load-balance, 美国节点, url = http://www.gstatic.com/generate_204, interval = 60, max-timeout = 3000, algorithm = pcc, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
-新加坡负载均衡策略组 = load-balance, 新加坡节点, url = http://www.gstatic.com/generate_204, interval = 60, max-timeout = 3000, algorithm = pcc, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
+香港负载均衡策略组 = load-balance, 香港节点, url = http://cp.cloudflare.com/generate_204, interval = 60, max-timeout = 3000, algorithm = pcc, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
+台湾负载均衡策略组 = load-balance, 台湾节点, url = http://cp.cloudflare.com/generate_204, interval = 60, max-timeout = 3000, algorithm = pcc, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
+日本负载均衡策略组 = load-balance, 日本节点, url = http://cp.cloudflare.com/generate_204, interval = 60, max-timeout = 3000, algorithm = pcc, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
+韩国负载均衡策略组 = load-balance, 韩国节点, url = http://cp.cloudflare.com/generate_204, interval = 60, max-timeout = 3000, algorithm = pcc, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/KR.png
+美国负载均衡策略组 = load-balance, 美国节点, url = http://cp.cloudflare.com/generate_204, interval = 60, max-timeout = 3000, algorithm = pcc, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
+新加坡负载均衡策略组 = load-balance, 新加坡节点, url = http://cp.cloudflare.com/generate_204, interval = 60, max-timeout = 3000, algorithm = pcc, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
 # --------------------------------
 # 手动策略组
 游戏节点手动策略组 = select, 游戏节点, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Static.png
@@ -95,22 +95,21 @@ FINAL, 香港场景策略组
 
 [Remote Rule]
 https://gitlab.com/lodepuly/anti-ad/-/raw/master/anti-ad-surge.txt, policy = REJECT, tag = Anti-AD, enabled = true
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Telegram/Telegram.list, policy = 香港场景策略组, tag = Telegram, enabled = true
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Telegram/Telegram.list, policy = 香港, tag = Telegram, enabled = true
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/TikTok/TikTok.list, policy = 日本, tag = TikTok, enabled = true
+https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/OpenAI.list, policy = 香港, tag = OpenAI, enabled = true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/ApplePushNotificationService.list, policy = DIRECT, tag = Apple Push Notification Service, enabled = true
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/TikTok/TikTok.list, policy = 日本场景策略组, tag = TikTok, enabled = true
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/OpenAI.list, policy = 香港场景策略组, tag = OpenAI, enabled = true
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/AppleID.list, policy = 香港场景策略组, tag = Apple ID, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/TestFlight/TestFlight.list, policy = 香港场景策略组, tag = TestFlight, enabled = false
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/AppStore.list, policy = 香港场景策略组, tag = App Store, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/GitHub/GitHub.list, policy = 香港场景策略组, tag = GitHub, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Netflix/Netflix.list, policy = 新加坡场景策略组, tag = Netflix, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/YouTube/YouTube.list, policy = 香港场景策略组, tag = Youtube, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Disney/Disney.list, policy = 香港场景策略组, tag = Disney, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Twitter/Twitter.list, policy = 香港场景策略组, tag = Twitter, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Spotify/Spotify.list, policy = 香港场景策略组, tag = Spotify, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Google/Google.list, policy = 香港场景策略组, tag = Google, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/OneDrive/OneDrive.list, policy = 香港场景策略组, tag = OneDrive, enabled = false
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/Speedtest.list, policy = DIRECT, tag = Speedtest, enabled = false
+https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/AppleID.list, policy = DIRECT, tag = Apple ID, enabled = true
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/TestFlight/TestFlight.list, policy = DIRECT, tag = TestFlight, enabled = true
+https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/AppStore.list, policy = DIRECT, tag = App Store, enabled = true
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/GitHub/GitHub.list, policy = 香港, tag = GitHub, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Netflix/Netflix.list, policy = 新加坡, tag = Netflix, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/YouTube/YouTube.list, policy = 香港, tag = Youtube, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Disney/Disney.list, policy = 香港, tag = Disney, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Twitter/Twitter.list, policy = 香港, tag = Twitter, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Spotify/Spotify.list, policy = 香港, tag = Spotify, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Google/Google.list, policy = 香港, tag = Google, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/OneDrive/OneDrive.list, policy = 香港, tag = OneDrive, enabled = false
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/RULE_LAN, policy = DIRECT, tag = LAN, enabled = true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/RULE_REGION, policy = DIRECT, tag = CN REGION, enabled = true
 
