--- a/Tool/Loon/Config/Loon_Simple_Sample_Configuration_By_iKeLee.conf
+++ b/Tool/Loon/Config/Loon_Simple_Sample_Configuration_By_iKeLee.conf
@@ -1,5 +1,5 @@
 # Loon 最小配置
-# Date: 2023.04.12
+# Date: 2023.04.14
 # Author: https://t.me/iKeLee
 
 [General]
@@ -35,12 +35,12 @@ bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/
 
 [Proxy Group]
 # 延时优选策略组
-香港 = url-test, 香港节点, url = http://www.gstatic.com/generate_204, interval = 60, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
-台湾 = url-test, 台湾节点, url = http://www.gstatic.com/generate_204, interval = 60, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
-日本 = url-test, 日本节点, url = http://www.gstatic.com/generate_204, interval = 60, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
-韩国 = url-test, 韩国节点, url = http://www.gstatic.com/generate_204, interval = 60, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/KR.png
-美国 = url-test, 美国节点, url = http://www.gstatic.com/generate_204, interval = 60, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
-新加坡 = url-test, 新加坡节点, url = http://www.gstatic.com/generate_204, interval = 60, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
+香港 = url-test, 香港节点, url = http://cp.cloudflare.com/generate_204, interval = 60, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
+台湾 = url-test, 台湾节点, url = http://cp.cloudflare.com/generate_204, interval = 60, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
+日本 = url-test, 日本节点, url = http://cp.cloudflare.com/generate_204, interval = 60, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
+韩国 = url-test, 韩国节点, url = http://cp.cloudflare.com/generate_204, interval = 60, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/KR.png
+美国 = url-test, 美国节点, url = http://cp.cloudflare.com/generate_204, interval = 60, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
+新加坡 = url-test, 新加坡节点, url = http://cp.cloudflare.com/generate_204, interval = 60, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
 # --------------------------------
 # 手动策略组
 游戏手动 = select, 游戏节点, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Static.png
@@ -62,12 +62,12 @@ FINAL, 香港
 [Remote Rule]
 https://gitlab.com/lodepuly/anti-ad/-/raw/master/anti-ad-surge.txt, policy = REJECT, tag = Anti-AD, enabled = true
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Telegram/Telegram.list, policy = 香港, tag = Telegram, enabled = true
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/ApplePushNotificationService.list, policy = DIRECT, tag = Apple Push Notification Service, enabled = true
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/TikTok/TikTok.list, policy = 日本, tag = TikTok, enabled = true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/OpenAI.list, policy = 香港, tag = OpenAI, enabled = true
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/AppleID.list, policy = 香港, tag = Apple ID, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/TestFlight/TestFlight.list, policy = 香港, tag = TestFlight, enabled = false
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/AppStore.list, policy = 香港, tag = App Store, enabled = false
+https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/ApplePushNotificationService.list, policy = DIRECT, tag = Apple Push Notification Service, enabled = true
+https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/AppleID.list, policy = DIRECT, tag = Apple ID, enabled = true
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/TestFlight/TestFlight.list, policy = DIRECT, tag = TestFlight, enabled = true
+https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/AppStore.list, policy = DIRECT, tag = App Store, enabled = true
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/GitHub/GitHub.list, policy = 香港, tag = GitHub, enabled = false
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Netflix/Netflix.list, policy = 新加坡, tag = Netflix, enabled = false
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/YouTube/YouTube.list, policy = 香港, tag = Youtube, enabled = false
@@ -76,7 +76,6 @@ https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Twitter/
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Spotify/Spotify.list, policy = 香港, tag = Spotify, enabled = false
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Google/Google.list, policy = 香港, tag = Google, enabled = false
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/OneDrive/OneDrive.list, policy = 香港, tag = OneDrive, enabled = false
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/Speedtest.list, policy = DIRECT, tag = Speedtest, enabled = false
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/RULE_LAN, policy = DIRECT, tag = LAN, enabled = true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/RULE_REGION, policy = DIRECT, tag = CN REGION, enabled = true
 
