更新Loon配置文件模板

--- a/Tool/Loon/Config/Loon_Simple_Sample_Configuration_By_iKeLee.conf
+++ b/Tool/Loon/Config/Loon_Simple_Sample_Configuration_By_iKeLee.conf
@@ -1,5 +1,5 @@
 # Loon 最小配置
-# Date: 2023.04.15
+# Date: 2023.04.16
 # Author: https://t.me/iKeLee
 
 [General]
@@ -75,7 +75,6 @@ https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Twitter/
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Spotify/Spotify.list, policy = 香港, tag = Spotify, enabled = false
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/Google/Google.list, policy = 香港, tag = Google, enabled = false
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/Loon/OneDrive/OneDrive.list, policy = 香港, tag = OneDrive, enabled = false
-https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/RULE_LAN, policy = DIRECT, tag = LAN, enabled = true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/RULE_REGION, policy = DIRECT, tag = CN REGION, enabled = true
 
 [Host]
@@ -103,6 +102,7 @@ https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/Amap_remove_ads
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/BaiduNetDisk_remove_ads.plugin, enabled = true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/NeteaseCloudMusic_remove_ads.plugin, enabled = true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/smzdm_remove_ads.plugin, enabled = true
+https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/WexinMiniPrograms_Remove_ads.plugin, enabled = true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/Weixin_Official_Accounts_remove_ads.plugin, enabled = true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/BaiduSearchWebpage_remove_ads.plugin, enabled = true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Plugin/Weixin_external_links_unlock.plugin, enabled = true
