--- a/Tool/QuantumultX/Config/Quantumult_X_Simple_Sample_Configuration_By_iKeLee.conf
+++ b/Tool/QuantumultX/Config/Quantumult_X_Simple_Sample_Configuration_By_iKeLee.conf
@@ -1,6 +1,6 @@
 # Quantumelt X 最小配置
 #
-# 日期：2023.04.15
+# 日期：2023.04.18
 # 配置作者：https://t.me/iKeLee
 # 适用版本：v1.1.0 及以上
 [general]
@@ -17,12 +17,12 @@ server = 223.5.5.5, excluded_ssids = PHICOMM_5G
 server = 10.0.0.1:7874, included_ssids = PHICOMM_5G
 doh-server = https://223.5.5.5/dns-query, https://dns.alidns.com/dns-query, excluded_ssids = PHICOMM_5G
 [policy]
-url-latency-benchmark = 香港, resource-tag-regex = ., server-tag-regex = ^(?=.*((?i)🇭🇰|港|虚通|HK|Hong))(?!.*((?i)回国|校园|游戏|教育|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|群|GAME|TG)).*$, check-interval = 60, alive-checking = false, tolerance = 0, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
-url-latency-benchmark = 台湾, resource-tag-regex = ., server-tag-regex = ^(?=.*((?i)🇹🇼|台|TW|Tai))(?!.*((?i)回国|校园|游戏|教育|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|群|GAME|TG)).*$, check-interval = 60, alive-checking = false, tolerance = 0, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
-url-latency-benchmark = 日本, resource-tag-regex = ., server-tag-regex = ^(?=.*((?i)🇯🇵|日|川日|东京|大阪|泉日|埼玉|JP|Japan))(?!.*((?i)回国|校园|游戏|教育|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|群|GAME|TG)).*$, check-interval = 60, alive-checking = false, tolerance = 0, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
-url-latency-benchmark = 韩国, resource-tag-regex = ., server-tag-regex = ^(?=.*((?i)🇰🇷|韩|韓|首尔|KR|Korea))(?!.*((?i)回国|校园|游戏|教育|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|群|GAME|TG)).*$, check-interval = 60, alive-checking = false, tolerance = 0, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/KR.png
-url-latency-benchmark = 美国, resource-tag-regex = ., server-tag-regex = ^(?=.*((?i)🇺🇸|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|UnitedStates))(?!.*((?i)回国|校园|游戏|教育|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|群|GAME|TG)).*$, check-interval = 60, alive-checking = false, tolerance = 0, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
-url-latency-benchmark = 新加坡, resource-tag-regex = ., server-tag-regex = ^(?=.*((?i)🇸🇬|新加坡|狮|SG|Singapore))(?!.*((?i)回国|校园|游戏|教育|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|群|GAME|TG)).*$, check-interval = 60, alive-checking = false, tolerance = 0, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
+url-latency-benchmark = 香港, resource-tag-regex = ., server-tag-regex = ^(?=.*((?i)🇭🇰|港|HK|Hong))(?!.*((?i)回国|校园|游戏|教育|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|到期|过期|已用|群|GAME|TG)).*$, check-interval = 60, alive-checking = false, tolerance = 0, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
+url-latency-benchmark = 台湾, resource-tag-regex = ., server-tag-regex = ^(?=.*((?i)🇹🇼|台|TW|Tai))(?!.*((?i)回国|校园|游戏|教育|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|到期|过期|已用|群|GAME|TG)).*$, check-interval = 60, alive-checking = false, tolerance = 0, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
+url-latency-benchmark = 日本, resource-tag-regex = ., server-tag-regex = ^(?=.*((?i)🇯🇵|日|川日|东京|大阪|泉日|埼玉|JP|Japan))(?!.*((?i)回国|校园|游戏|教育|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|到期|过期|已用|群|GAME|TG)).*$, check-interval = 60, alive-checking = false, tolerance = 0, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
+url-latency-benchmark = 韩国, resource-tag-regex = ., server-tag-regex = ^(?=.*((?i)🇰🇷|韩|韓|首尔|KR|Korea))(?!.*((?i)回国|校园|游戏|教育|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|到期|过期|已用|群|GAME|TG)).*$, check-interval = 60, alive-checking = false, tolerance = 0, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/KR.png
+url-latency-benchmark = 美国, resource-tag-regex = ., server-tag-regex = ^(?=.*((?i)🇺🇸|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|UnitedStates))(?!.*((?i)回国|校园|游戏|教育|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|到期|过期|已用|群|GAME|TG)).*$, check-interval = 60, alive-checking = false, tolerance = 0, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
+url-latency-benchmark = 新国, resource-tag-regex = ., server-tag-regex = ^(?=.*((?i)🇸🇬|新加坡|狮|SG|Singapore))(?!.*((?i)回国|校园|游戏|教育|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|到期|过期|已用|群|GAME|TG)).*$, check-interval = 60, alive-checking = false, tolerance = 0, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
 static = 游戏手动, resource-tag-regex = ., server-tag-regex = ^(?=.*((?i)游戏|GAME))(?!.*((?i)回国|校园|教育|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|群|TG)).*$, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Static.png
 static = 全球手动, resource-tag-regex = ., server-tag-regex = ^(?=.*(.*))(?!.*((?i)回国|校园|教育|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|群|TG)).*$, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Static.png
 [server_remote]
@@ -38,7 +38,7 @@ https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rule/AppleID.sn
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/TestFlight/TestFlight.list, tag = TestFlight, force-policy = direct, update-interval = 86400, opt-parser = false, enabled = true
 https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/QuantumultX/Rule/AppStore.snippet, tag = App Store, force-policy = direct, update-interval = 86400, opt-parser = false, enabled = false
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/GitHub/GitHub.list, tag = GitHub, force-policy = 香港, update-interval = 86400, opt-parser = false, enabled = false
-https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Netflix/Netflix.list, tag = Netflix, force-policy = 新加坡, update-interval = 86400, opt-parser = false, enabled = false
+https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Netflix/Netflix.list, tag = Netflix, force-policy = 新国, update-interval = 86400, opt-parser = false, enabled = false
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/YouTube/YouTube.list, tag = YouTube, force-policy = 香港, update-interval = 86400, opt-parser = false, enabled = false
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Disney/Disney.list, tag = Disney, force-policy = 香港, update-interval = 86400, opt-parser = false, enabled = false
 https://gitlab.com/lodepuly/proxy_tool_resources/-/raw/master/rule/QuantumultX/Twitter/Twitter.list, tag = Twitter, force-policy = 香港, update-interval = 86400, opt-parser = false, enabled = false
