--- a/Tool/QuantumultX/Config/Quantumult_X_Sample_Configuration_By_iKeLee.conf
+++ b/Tool/QuantumultX/Config/Quantumult_X_Sample_Configuration_By_iKeLee.conf
@@ -15,7 +15,7 @@ no-system
 server = 119.29.29.29, excluded_ssids = PHICOMM_5G
 server = 223.5.5.5, excluded_ssids = PHICOMM_5G
 server = 10.0.0.1:7874, included_ssids = PHICOMM_5G
-doq-server = quic://162.14.132.109:853, quic://south.tex0n.net:785, excluded_ssids = PHICOMM_5G
+doh-server = https://223.5.5.5/dns-query, https://dns.alidns.com/dns-query, excluded_ssids = PHICOMM_5G 
 [policy]
 ssid = 香港场景策略组, 香港策略, 香港策略, PHICOMM_5G:DIRECT, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SSID.png
 ssid = 台湾场景策略组, 台湾策略, 台湾策略, PHICOMM_5G:DIRECT, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SSID.png
