--- a/Tool/QuantumultX/Config/Quantumult_X_Simple_Sample_Configuration_By_iKeLee.conf
+++ b/Tool/QuantumultX/Config/Quantumult_X_Simple_Sample_Configuration_By_iKeLee.conf
@@ -6,16 +6,16 @@
 [general]
 profile_img_url = https://gitlab.com/lodepuly/iconlibrary/raw/master/App_icon/144px/Quantumult_X.png
 resource_parser_url = https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
-geo_location_checker = http://ip-api.com/json/?lang=zh-CN, https://gitlab.com/lodepuly/vpn_tool/raw/main/Resource/Script/GeoIP/Geo_Location_Checker_for_QX.js
 server_check_timeout = 2000
-;geo_location_checker = http://ip-api.com/json/?lang=zh-CN, https://gitlab.com/lodepuly/vpn_tool/raw/main/Resource/Script/GeoIP/Geo_Location_Checker_for_QX.js
+geo_location_checker = http://ip-api.com/json/?lang=zh-CN, https://gitlab.com/lodepuly/vpn_tool/raw/main/Resource/Script/GeoIP/Geo_Location_Checker_for_QX.js
 dns_exclusion_list = *.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.me
 [dns]
+prefer-doh3
 no-system
 server = 119.29.29.29, excluded_ssids = PHICOMM_5G
 server = 223.5.5.5, excluded_ssids = PHICOMM_5G
 server = 10.0.0.1:7874, included_ssids = PHICOMM_5G
-doh-server = https://223.5.5.5/dns-query, https://dns.alidns.com/dns-query, excluded_ssids = PHICOMM_5G
+doh-server = https://223.5.5.5/dns-query, https://dns.alidns.com/dns-query, excluded_ssids = PHICOMM_5G 
 [policy]
 url-latency-benchmark = 香港, resource-tag-regex = ., server-tag-regex = ^(?=.*((?i)🇭🇰|港|HK|Hong))(?!.*((?i)回国|校园|游戏|教育|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|到期|过期|已用|群|GAME)).*$, check-interval = 60, alive-checking = false, tolerance = 0, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
 url-latency-benchmark = 台湾, resource-tag-regex = ., server-tag-regex = ^(?=.*((?i)🇹🇼|台|TW|Tai))(?!.*((?i)回国|校园|游戏|教育|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|到期|过期|已用|群|GAME)).*$, check-interval = 60, alive-checking = false, tolerance = 0, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
