--- a/Tool/Loon/Config/Loon_Simple_Sample_Configuration_By_iKeLee.conf
+++ b/Tool/Loon/Config/Loon_Simple_Sample_Configuration_By_iKeLee.conf
@@ -1,5 +1,5 @@
 # Loon 最小配置
-# Date: 2023.04.19
+# Date: 2023.04.20
 # Author: https://t.me/iKeLee
 
 [General]
@@ -7,6 +7,7 @@ ipv6 = true
 dns-server = 119.29.29.29, 223.5.5.5
 # 腾讯DoH和阿里云DoH
 doh-server = https://223.5.5.5/dns-query, https://dns.alidns.com/dns-query
+disable-udp-ports = 443
 allow-wifi-access = false
 wifi-access-http-port = 7222
 wifi-access-socks5-port = 7221
