--- a/Tool/QuantumultX/Config/Quantumult_X_Simple_Sample_Configuration_By_iKeLee.conf
+++ b/Tool/QuantumultX/Config/Quantumult_X_Simple_Sample_Configuration_By_iKeLee.conf
@@ -1,6 +1,6 @@
 # Quantumelt X 最小配置
 #
-# 日期：2023.04.20
+# 日期：2023.04.22
 # 配置作者：https://t.me/iKeLee
 # 适用版本：v1.1.0 及以上
 [general]
@@ -17,14 +17,14 @@ server = 223.5.5.5, excluded_ssids = PHICOMM_5G
 server = 10.0.0.1:7874, included_ssids = PHICOMM_5G
 doh-server = https://223.5.5.5/dns-query, https://dns.alidns.com/dns-query, excluded_ssids = PHICOMM_5G 
 [policy]
-url-latency-benchmark = 香港, resource-tag-regex = ., server-tag-regex = ^(?=.*((?i)🇭🇰|港|HK|Hong))(?!.*((?i)回国|校园|游戏|教育|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|到期|过期|已用|群|GAME)).*$, check-interval = 60, alive-checking = false, tolerance = 0, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
-url-latency-benchmark = 台湾, resource-tag-regex = ., server-tag-regex = ^(?=.*((?i)🇹🇼|台|TW|Tai))(?!.*((?i)回国|校园|游戏|教育|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|到期|过期|已用|群|GAME)).*$, check-interval = 60, alive-checking = false, tolerance = 0, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
-url-latency-benchmark = 日本, resource-tag-regex = ., server-tag-regex = ^(?=.*((?i)🇯🇵|日|川日|东京|大阪|泉日|埼玉|JP|Japan))(?!.*((?i)回国|校园|游戏|教育|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|到期|过期|已用|群|GAME)).*$, check-interval = 60, alive-checking = false, tolerance = 0, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
-url-latency-benchmark = 韩国, resource-tag-regex = ., server-tag-regex = ^(?=.*((?i)🇰🇷|韩|韓|首尔|KR|Korea))(?!.*((?i)回国|校园|游戏|教育|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|到期|过期|已用|群|GAME)).*$, check-interval = 60, alive-checking = false, tolerance = 0, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/KR.png
-url-latency-benchmark = 美国, resource-tag-regex = ., server-tag-regex = ^(?=.*((?i)🇺🇸|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|UnitedStates))(?!.*((?i)回国|校园|游戏|教育|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|到期|过期|已用|群|GAME)).*$, check-interval = 60, alive-checking = false, tolerance = 0, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
-url-latency-benchmark = 新国, resource-tag-regex = ., server-tag-regex = ^(?=.*((?i)🇸🇬|新加坡|狮|SG|Singapore))(?!.*((?i)回国|校园|游戏|教育|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|到期|过期|已用|群|GAME)).*$, check-interval = 60, alive-checking = false, tolerance = 0, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
-static = 游戏手动, resource-tag-regex = ., server-tag-regex = ^(?=.*((?i)游戏|GAME))(?!.*((?i)回国|校园|教育|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|群)).*$, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Static.png
-static = 全球手动, resource-tag-regex = ., server-tag-regex = ^(?=.*(.*))(?!.*((?i)回国|校园|教育|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|群)).*$, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Static.png
+url-latency-benchmark = 香港, resource-tag-regex = ., server-tag-regex = ^(?=.*((?i)🇭🇰|香港|(\b(HK|Hong)\b)))(?!.*((?i)回国|校园|游戏|(\b(GAME)\b))).*$, check-interval = 60, alive-checking = false, tolerance = 0, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
+url-latency-benchmark = 台湾, resource-tag-regex = ., server-tag-regex = ^(?=.*((?i)🇹🇼|台湾|(\b(TW|Tai)\b)))(?!.*((?i)回国|校园|游戏|(\b(GAME)\b))).*$, check-interval = 60, alive-checking = false, tolerance = 0, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
+url-latency-benchmark = 日本, resource-tag-regex = ., server-tag-regex = ^(?=.*((?i)🇯🇵|日本|川日|东京|大阪|泉日|埼玉|(\b(JP|Japan)\b)))(?!.*((?i)回国|校园|游戏|(\b(GAME)\b))).*$, check-interval = 60, alive-checking = false, tolerance = 0, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
+url-latency-benchmark = 韩国, resource-tag-regex = ., server-tag-regex = ^(?=.*((?i)🇰🇷|韩国|韓|首尔|(\b(KR|Korea)\b)))(?!.*((?i)回国|校园|游戏|(\b(GAME)\b))).*$, check-interval = 60, alive-checking = false, tolerance = 0, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/KR.png
+url-latency-benchmark = 美国, resource-tag-regex = ., server-tag-regex = ^(?=.*((?i)🇺🇸|美国|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|(\b(US|United States)\b)))(?!.*((?i)回国|校园|游戏|(\b(GAME)\b))).*$, check-interval = 60, alive-checking = false, tolerance = 0, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
+url-latency-benchmark = 新国, resource-tag-regex = ., server-tag-regex = ^(?=.*((?i)🇸🇬|新加坡|狮|(\b(SG|Singapore)\b)))(?!.*((?i)回国|校园|游戏|(\b(GAME)\b))).*$, check-interval = 60, alive-checking = false, tolerance = 0, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
+static = 游戏手动, resource-tag-regex = ., server-tag-regex = ^(?=.*((?i)游戏|(\b(GAME)\b)))(?!.*((?i)回国|校园|(\b(GAME)\b))).*$, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Static.png
+static = 全球手动, resource-tag-regex = ., server-tag-regex = ^(?=.*(.*))(?!.*((?i)回国|校园|教育|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|到期|过期|已用|群|(\b(GAME)\b))).*$, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Static.png
 [server_remote]
 
 [filter_remote]
