--- a/Tool/QuantumultX/Config/Quantumult_X_Sample_Configuration_By_iKeLee.conf
+++ b/Tool/QuantumultX/Config/Quantumult_X_Sample_Configuration_By_iKeLee.conf
@@ -1,6 +1,6 @@
 # Quantumelt X 进阶配置
 #
-# 日期：2023.04.22
+# 日期：2023.04.23
 # 配置作者：https://t.me/iKeLee
 # 适用版本：v1.1.0 及以上
 [general]
@@ -48,7 +48,7 @@ dest-hash = 韩国负载均衡, resource-tag-regex = ., server-tag-regex = ^(?=.
 dest-hash = 美国负载均衡, resource-tag-regex = ., server-tag-regex = ^(?=.*((?i)🇺🇸|美国|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|(\b(US|United States)\b)))(?!.*((?i)回国|校园|游戏|(\b(GAME)\b))).*$, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
 dest-hash = 新国负载均衡, resource-tag-regex = ., server-tag-regex = ^(?=.*((?i)🇸🇬|新加坡|狮|(\b(SG|Singapore)\b)))(?!.*((?i)回国|校园|游戏|(\b(GAME)\b))).*$, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
 static = 游戏手动, resource-tag-regex = ., server-tag-regex = ^(?=.*((?i)游戏|(\b(GAME)\b)))(?!.*((?i)回国|校园|(\b(GAME)\b))).*$, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Static.png
-static = 全球手动, resource-tag-regex = ., server-tag-regex = ^(?=.*(.*))(?!.*((?i)回国|校园|教育|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|到期|过期|已用|群|(\b(GAME)\b))).*$, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Static.png
+static = 全球手动, resource-tag-regex = ., server-tag-regex = ^(?=.*(.*))(?!.*((?i)回国|校园|教育|官网|客服|网站|网址|获取|订阅|流量|到期|机场|下次|版本|官址|备用|到期|过期|已用|联系|邮箱|工单|群|(\b(GAME|USE|USED|TOTAL|EXPIRE|EMAIL)\b))).*$, img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Static.png
 [server_remote]
 [filter_remote]
 https://gitlab.com/lodepuly/anti-ad/-/raw/master/anti-ad-surge.txt, tag = anti-AD, force-policy = reject, update-interval = 86400, opt-parser = true, enabled = true
